force-app/main/default/objects/AI_Cross_Object_Filter__c/AI_Cross_Object_Filter__c.object-meta.xml
<CustomObject>
    <label>Cross Object Filter</label>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Filter #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross Object Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>