force-app/main/default/objects/AI_Cross_Object_Filter__c/fields/AI_Prompt_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt_Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt Scheduler</label>
    <referenceTo>AI_Prompt_Scheduler__c</referenceTo>
    <relationshipLabel>Cross Object Filters</relationshipLabel>
    <relationshipName>Cross_Object_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>