force-app/main/default/objects/AI_Cross_Object_Filter__c/fields/Filter_Query__c.field-meta.xml
<CustomField>
    <fullName>Filter_Query__c</fullName>
    <label>Filter Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>