force-app/main/default/objects/AI_Cross_Object_Filter__c/fields/Object_API__c.field-meta.xml
<CustomField>
    <fullName>Object_API__c</fullName>
    <label>Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>