force-app/main/default/objects/AI_Cross_Object_Filter__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not Equals</fullName>
            </value>
            <value>
                <fullName>Less than</fullName>
            </value>
            <value>
                <fullName>Less than or Equals</fullName>
            </value>
            <value>
                <fullName>Greater than</fullName>
            </value>
            <value>
                <fullName>Greater than or Equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>