force-app/main/default/objects/AI_Cross_Object_Filter__c/fields/Parent_Filter__c.field-meta.xml
<CustomField>
    <fullName>Parent_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Filter</label>
    <referenceTo>AI_Cross_Object_Filter__c</referenceTo>
    <relationshipLabel>Cross Object Filters</relationshipLabel>
    <relationshipName>Cross_Object_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>