force-app/main/default/objects/AI_Cross_Object_Filter__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>