force-app/main/default/objects/AI_Cross_Object_Filter__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Qualify Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>